--- a/1-Machine_Learning_Fundamentals.ipynb
+++ b/1-Machine_Learning_Fundamentals.ipynb
@@ -31,6 +31,7 @@
         "colab": {}
       },
       "source": [
+        "# Importing used libs \n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt"
       ],
@@ -45,6 +46,7 @@
         "colab": {}
       },
       "source": [
+        "#Create function that calculates w1 and w2\n",
         "def h(x):\n",
         "  w1 = 0\n",
         "  w2 = 1\n",
