--- a/1-Machine_Learning_Fundamentals.ipynb
+++ b/1-Machine_Learning_Fundamentals.ipynb
@@ -35,7 +35,7 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -46,14 +46,14 @@
         "colab": {}
       },
       "source": [
-        "#Create function that calculates w1 and w2\n",
+        "#Create function to calculat w1 and w2\n",
         "def h(x):\n",
         "  w1 = 0\n",
         "  w2 = 1\n",
         "  y = w1 + w2 *x\n",
         "  return y"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -65,29 +65,31 @@
           "base_uri": "https://localhost:8080/",
           "height": 282
         },
-        "outputId": "44e2046b-0045-4ee8-e556-93835c4aaffc"
+        "outputId": "7ed70c69-5fdf-481e-f2a9-3a020539c9a9"
       },
       "source": [
+        "#creating numpy arrays in different\n",
         "x = np.array([0, 1, 2, 3, 4, 5])\n",
         "y = np.array([0, 1, 2, 3, 4, 5])\n",
-        "plt.scatter(x,y)\n",
         "x1 = np.array([0, 5])\n",
         "\n",
+        "#add 1D 2 axis graph to plot current data using Matplotlib\n",
+        "plt.scatter(x,y)\n",
         "plt.plot(x, h(x))"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x7fbb0118f1d0>]"
+              "[<matplotlib.lines.Line2D at 0x7f5b7b862be0>]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 22
+          "execution_count": 6
         },
         {
           "output_type": "display_data",
@@ -112,11 +114,12 @@
         "colab": {}
       },
       "source": [
+        "#Create function that computes the losss using MSE formula\n",
         "def compute_loss(x, y, h):\n",
         "  mse = np.sum((h(x) - y)**2) / (2 * x.shape[0])\n",
         "  return mse"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -128,12 +131,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "84cb9c4a-7c75-43ab-aea0-c45a7c564778"
+        "outputId": "e1b94abd-b9f0-454e-e9ce-136c4cbb63eb"
       },
       "source": [
+        "#Execute compute loss function\n",
         "compute_loss(x, y, h)"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -145,7 +149,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 23
+          "execution_count": 8
         }
       ]
     },
@@ -158,9 +162,10 @@
           "base_uri": "https://localhost:8080/",
           "height": 282
         },
-        "outputId": "1e69d30b-d91d-4ebd-bcd6-38445b4118f0"
+        "outputId": "c703a5f3-e568-4d0c-c6f7-dc83b186052e"
       },
       "source": [
+        "#Compute the loss for multiple values and graph the outputs\n",
         "w2_values = [i for i in np.arange(-10, 10, 0.1)]\n",
         "y_loss = []\n",
         "for w2_value in w2_values:\n",
@@ -173,19 +178,19 @@
         "\n",
         "plt.plot(w2_values, y_loss)\n"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x7fbb00ffa828>]"
+              "[<matplotlib.lines.Line2D at 0x7f5b7b7a0128>]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 25
+          "execution_count": 9
         },
         {
           "output_type": "display_data",
@@ -214,10 +219,14 @@
         "outputId": "f7c8d09f-c33f-4b63-f753-e3e2fdcb6612"
       },
       "source": [
+        "#return equally spaced numbers forming a numpy list as values for w1 and w2\n",
         "w1_values = np.linspace(-10, 10, 50)\n",
         "w2_values = np.linspace(-10, 10, 50)\n",
+        "\n",
+        "#Create the loss list with values = 0\n",
         "loss = np.zeros((w1_values.shape[0], w2_values.shape[0]))\n",
         "\n",
+        "#Iterate through W1_values and w2-values uses Enumerator to associate each one with its corresponding value\n",
         "for i, w1_value in enumerate(w1_values):\n",
         "  for j, w2_value in enumerate(w2_values):\n",
         "    def f(x):\n",
@@ -226,6 +235,8 @@
         "      y = w1 + w2 * x\n",
         "      return y\n",
         "    loss[i,j] = compute_loss(x, y, f)\n",
+        "\n",
+        "#Graph the ouput function on a color bar\n",
         "plt.contour(w1_values, w2_values, loss, 2000, cmap=plt.cm.jet)\n",
         "cbar = plt.colorbar()"
       ],
